<resources>
    <string name="app_name">Beer Is Good</string>
    <string name="assignment_no">CS 496 Final Project</string>

    <!-- API Access -->
    <!--
    TODO: Before you run your application, you need a Google Maps API key.
    To get one, follow this link, follow the directions and press "Create" at the end:
    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=63:7C:81:89:EF:24:7D:AF:36:18:F2:22:0A:69:55:68:60:13:F2:44%3Bcs496team1.myapplication
    You can also add your credentials to an existing key, using these values:
    Package name:
    63:7C:81:89:EF:24:7D:AF:36:18:F2:22:0A:69:55:68:60:13:F2:44
    SHA-1 certificate fingerprint:
    63:7C:81:89:EF:24:7D:AF:36:18:F2:22:0A:69:55:68:60:13:F2:44
    Alternatively, follow the directions here:
    https://developers.google.com/maps/documentation/android/start#get-key
    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
    -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC1IwWngp8-Y16M7qWfuWgJtOG9EsEfLtg</string>

    <string name="brewerydb_api_key">4e7354b8b5c4e66dd3b58e60b53dd246</string>
    <string name="brewerydb_base_url">http://api.brewerydb.com/v2/</string>
    <string name="brewerydb_base_key">key</string>
    <string name="brewerydb_base_beer">beers</string>
    <string name="brewerydb_base_location">locations</string>

    <string name="brewerydb_beer_additional">withBreweries=Y&amp;p=</string>


    <!-- Titles -->
    <string name="title_share">Share</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_details">Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_section_title">Section Title</string>
    <string name="title_lastupdated">Last Updated - %1$s</string>
    <string name="title_uptodate">Up to Date</string>
    <string name="title_beer">Beer</string>
    <string name="title_beers">Beers</string>
    <string name="title_location">Location</string>
    <string name="title_locations">Locations</string>
    <string name="title_description">Description</string>
    <string name="title_ibu">IBU</string>
    <string name="title_abv">ABV</string>
    <string name="title_og">OG</string>
    <string name="title_organic">Organic</string>
    <string name="title_properties">Properties</string>
    <string name="title_foodpairing">Food pairing</string>
    <string name="title_glasstype">Glass type</string>
    <string name="title_serving">Serving</string>
    <string name="title_vintage">Vintage</string>

    <string name="title_servewith">Serve with</string>
    <string name="title_serveat">Serve at</string>
    <string name="title_servein">Serve in</string>

    <string name="title_availability">Availability</string>
    <string name="title_category">Category</string>



    <string name="title_search_area">Search this area</string>


    <!-- Error -->
    <string name="error_generic">There was an error</string>
    <string name="error_api_max_req">No Request Made - Loading last request</string>
    <string name="error_JSON">Error converting JSON data</string>
    <string name="error_datetime_invalid">Invalid DateTime given</string>
    <string name="error_open_activity">Could not start activity</string>
    <string name="error_intent_data">Invalid intent data (weather measurement)</string>

    <!-- Subtitles -->
    <string name="subtitle_nullresponse">Null output received from request</string>
    <string name="subtitle_api_max_req">OpenWeatherMap has a 10min wait between API requests</string>


    <!-- ToolTip -->
    <string name="tt_loading">Loading</string>

    <!-- Actions -->
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>

    <!-- Placeholders -->
    <string name="placeholder_title">Title</string>
    <string name="placeholder_subtitle">SubTitle</string>
    <string name="placeholder_number">#</string>
    <string name="placeholder_boolean">yes/no</string>
    <string name="placeholder_phone">Phone</string>
    <string name="placeholder_website">Website</string>
    <string name="placeholder_hours">Hours of Operation</string>
    <string name="placeholder_brewery">Brewery</string>
    <string name="placeholder_description">Description</string>

    <!-- Template -->
    <string name="template_location">%1$s, %2$s, %3$s %4$s</string>
    <string name="template_type">%1$s</string>
    <string name="template_found_location">Found %1$s locations in %2$s</string>
    <string name="template_found_nothing_in">Nothing found in %1$s</string>
    <string name="template_found_nothing">Nothing new found</string>
    <string name="template_opened"> • Opened %1$s</string>
    <string name="template_est"> • Brewery Est. %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intent -->
    <!--Preferences -->

        <string name="forecast_for">Forecast for</string>
        <string name="loading_error_message">Woops.  We couldn\'t cload your forecast.  Check your internet connection and try again.</string>
        <string name="action_share">Share forecast</string>
        <string name="action_location">Show forecast location</string>
        <string name="action_settings">Settings</string>
        <string name="share_chooser_title">Pick an app to share this forecast</string>

        <string name="pref_sort_key">pref_sort</string>
        <string name="pref_sort_title">Sort by</string>
        <string name="pref_sort_default">stars</string>

        <string name="pref_language_key">pref_language</string>
        <string name="pref_language_title">Programming language</string>
        <string name="pref_language_default"></string>

        <string name="pref_in_title">Search Based on Attributes</string>
        <string name="pref_in_units_key">pref_in_units</string>
        <string name="pref_in_abv">No ABV</string>
        <string name="pref_in_abv_key">pref_in_celsius</string>
        <string name="pref_in_organic">Organic </string>
        <string name="pref_in_organic_key">pref_in_farenheit</string>
        <string name="pref_in_hops">Hops</string>
        <string name="pref_in_hops_key">pref_in_kelvin</string>

        <string name="pref_user_title">Search Location</string>
        <string name="pref_user_key">pref_user</string>

</resources>
